--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ CDP_API_KEY_ID=your_cdp_api_key_id_here
 
 # CDP API key secret
 CDP_API_KEY_SECRET=your_cdp_api_key_secret_here
+
+
+# Private key for the wallet (for testing buy)
+PRIVATE_KEY=0xPrivateKeyHere
